[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Pawns/Pawn_15/Pawn_15_Body.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Pawns/Pawn_15/Pawn_15_Face.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Pawns/Pawn_15/Parts/Pawn_15_Part_Arm.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Pawns/Pawn_15_Parts/Pawn_15_Part_Head.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Left"
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_15_Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_15_Body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -6, 6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pawn_15_Body/Pawn_15_Face:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pawn_15_Body/POS_Arm:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2, 8 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Right"
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_15_Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_15_Body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, 6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pawn_15_Body/Pawn_15_Face:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pawn_15_Body/POS_Arm:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 8 ) ]
}

[node name="Pawn_15_Part_Head" type="Node2D"]
script = ExtResource( 4 )

[node name="Shield" type="Sprite" parent="."]
visible = false
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 6, 6 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 1 )
hframes = 3

[node name="Pawn_15_Body" type="Sprite" parent="."]
self_modulate = Color( 0.490196, 0.490196, 0.490196, 1 )
position = Vector2( 6, 6 )
texture = ExtResource( 1 )
hframes = 3

[node name="Pawn_15_Face" type="Sprite" parent="Pawn_15_Body"]
texture = ExtResource( 2 )

[node name="POS_Arm" type="Position2D" parent="Pawn_15_Body"]
position = Vector2( 2, 8 )

[node name="Pawn_15_Part_Arm" parent="Pawn_15_Body/POS_Arm" instance=ExtResource( 3 )]

[node name="AnimationPlayer_Head" type="AnimationPlayer" parent="."]
anims/Left = SubResource( 1 )
anims/Right = SubResource( 2 )

[node name="AnimationPlayer_Face" type="AnimationPlayer" parent="."]
